# Wall-Painting-Robot

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ackermann_steering_controller/include/ackermann_steering_controller/: ackermann_steering_controller_parameters.hpp
install/ackermann_steering_controller/share/ackermann_steering_controller/: ackermann_steering_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/admittance_controller/include/admittance_controller/: admittance_controller_parameters.hpp
install/admittance_controller/share/admittance_controller/: admittance_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/bicycle_steering_controller/include/bicycle_steering_controller/: bicycle_steering_controller_parameters.hpp
install/bicycle_steering_controller/share/bicycle_steering_controller/: bicycle_steering_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/control_msgs/share/control_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/control_toolbox/include/control_toolbox/: custom_validators.hpp  exponential_filter_parameters.hpp  low_pass_filter_parameters.hpp  rate_limiter_parameters.hpp
install/control_toolbox/share/control_toolbox/: control_filters.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/controller_interface/include/controller_interface/: chainable_controller_interface.hpp  controller_interface.hpp  controller_interface_base.hpp  helpers.hpp  visibility_control.h
install/controller_interface/include/semantic_components/: force_torque_sensor.hpp  imu_sensor.hpp  pose_sensor.hpp  range_sensor.hpp  semantic_component_interface.hpp
install/controller_interface/share/controller_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/controller_manager/include/controller_manager/: controller_manager.hpp  controller_spec.hpp  visibility_control.h
install/controller_manager/lib/controller_manager/: hardware_spawner  ros2_control_node  spawner  unspawner
install/controller_manager/share/controller_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/controller_manager/test/: test_controller_overriding_parameters.yaml  test_controller_spawner_wildcard_entries.yaml  test_controller_spawner_with_basic_controllers.yaml  test_controller_spawner_with_interfaces.yaml  test_controller_spawner_with_type.yaml  test_ros2_control_node.yaml
install/controller_manager_msgs/share/controller_manager_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/diff_drive_controller/include/diff_drive_controller/: diff_drive_controller_parameters.hpp
install/diff_drive_controller/share/diff_drive_controller/: diff_drive_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/effort_controllers/share/effort_controllers/: effort_controllers_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/force_torque_sensor_broadcaster/include/force_torque_sensor_broadcaster/: force_torque_sensor_broadcaster_parameters.hpp
install/force_torque_sensor_broadcaster/share/force_torque_sensor_broadcaster/: force_torque_sensor_broadcaster.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/forward_command_controller/include/forward_command_controller/: forward_command_controller_parameters.hpp  multi_interface_forward_command_controller_parameters.hpp
install/forward_command_controller/share/forward_command_controller/: forward_command_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gpio_controllers/include/gpio_controllers/: gpio_command_controller.hpp  gpio_command_controller_parameters.hpp  visibility_control.h
install/gpio_controllers/share/gpio_controllers/: gpio_controllers_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gripper_controllers/include/gripper_controllers/: gripper_action_controller_parameters.hpp
log/: latest_build
pcd_files/: cloud_0.pcd  cloud_1.pcd  cloud_10.pcd  cloud_11.pcd  cloud_12.pcd  cloud_13.pcd  cloud_14.pcd  cloud_15.pcd  cloud_16.pcd  cloud_17.pcd  cloud_18.pcd  cloud_19.pcd  cloud_2.pcd  cloud_20.pcd  cloud_21.pcd  cloud_22.pcd  cloud_23.pcd  cloud_24.pcd  cloud_25.pcd  cloud_26.pcd  cloud_27.pcd  cloud_28.pcd  cloud_29.pcd  cloud_3.pcd  cloud_30.pcd  cloud_4.pcd  cloud_5.pcd  cloud_6.pcd  cloud_7.pcd  cloud_8.pcd  cloud_9.pcd  ex_cylinder0.pcd  ex_cylinder1.pcd  ex_cylinder2.pcd  ex_wall0.pcd  ex_wall1.pcd  non_plane_seg.pcd  plane_seg.pcd  voxelized.pcd
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/: CMakeLists.txt  package.xml
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/src/: clustering.cpp  planner_seg.cpp  test_pcl.cpp  voxelizing.cpp
src/livox_laser_simulation_ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/livox_laser_simulation_ros2/log/: latest_build
src/ur5e_controller/: CMakeLists.txt  package.xml  requirements.txt
src/ur5e_controller/config/: kinematics.yaml  lidar_config.yaml  lidar_transform.yaml
src/ur5e_controller/launch/: ur5e_controller.launch.py
src/ur5e_controller/scripts/: auto_setup_ur.py  collision_environment.py  crop_box_gui.py  livox_converter.py
src/ur5e_controller/src/: clustering.cpp  robot_mover.cpp  wall_detector.cpp  wall_painter.cpp
(+2454 files in other folders)
